Optimise AppOrgAuthQuery